# libkvstore2

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  configure.ac
src/: Makefile.am  kv.c  kv.h
test/: Makefile.am  kvs_test.c
